--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ const talks = await getCollectionEntries("talks", HOME.talkEntries ?? 0);
         />
       </div>
       <h1 class="animate text-3xl font-semibold text-black dark:text-white">
-        Hi, I'm {GLOBAL.author}
+        What's up! Artem here!
       </h1>
       <div class="space-y-16">
         <section>
